# DE-mini-project-1

./: Dockerfile-ubuntu  consumer1.py  consumer2.py  consumer3.py  docker-compose.yml  pyproject.toml  readme.md
-db_data/base/1/: 2619  pg_internal.init
-db_data/base/16384/: 2619
-db_data/base/4/: 2619
-db_data/base/5/: pg_internal.init
-db_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
-db_data/pg_stat/: pgstat.stat
codes/: get_data.py  producer.py
data/zoo-1/data/version-2/: snapshot.10a  snapshot.11f  snapshot.134  snapshot.149  snapshot.15e  snapshot.173  snapshot.188  snapshot.19d  snapshot.20  snapshot.35  snapshot.be  snapshot.f5
